# cpp-openrl

./: .gitmodules  CMakeLists.txt  README.md
docs/: plan.org  todo.org  worldgen.md
include/: config.h.in
src/lib/: CMakeLists.txt
src/lib/integration/: render_heightmap.cpp  render_map.cpp  write_png_colours.cpp
src/lib/main/: rng.h  sample.cpp
src/lib/main/png/: png.cpp  png.h
src/lib/main/world/: map_generator.cpp  map_generator.h  overview.cpp  overview.h
src/lib/test/: main.cpp  rng.cpp  sample_test.cpp
src/lib/test/world/: overview_test.cpp
src/main/: CMakeLists.txt
